# MTBench-Test

./: .gitignore  README.md  pyproject.toml
notebooks/: correlation_long_deepseek.ipynb  correlation_long_llama.ipynb  correlation_short_deepseek.ipynb  correlation_short_llama.ipynb  mcqa_long_deepseek.ipynb  mcqa_long_llama.ipynb  mcqa_short_deepseek.ipynb  mcqa_short_llama.ipynb  tsforecast_long_llama.ipynb  tsforecast_long_llama_combined.ipynb  tsforecast_short_llama.ipynb  tsforecast_short_llama_combined.ipynb
src/: finetune_llama_tsforecast.py  utils.py
src/finance/: correlation_prediction.py  mcqa.py  trend_classification.py  value_prediction.py
src/models/: base_model.py  deepseek_model.py  llama_model.py  model_factory.py  qwen_model.py
