[tool.poetry]
name = "mtbench-extensions"
version = "0.1.0"
description = ""
authors = ["AAnirudh07 <anirudh19015@cse.ssn.edu.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "1.5.3"
gdown = "5.2.0"
huggingface-hub = "0.29.0"
anthropic = "0.43.1"
openai = "1.59.7"
google = "3.0.0"
google-auth = "2.38.0"
google-genai = "1.2.0"
numpy = "1.24.4"
matplotlib = "3.9.0"
scikit-learn = "1.5.0"
transformers = "*"
torch = "*"
ollama = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
